[project]
name = "comfyui-tiledattentioncouple"
description = "TiledAttentionCouple is a custom node for ComfyUI that enables Attention Coupling across horizontal or vertical tiles. It allows fine(r)-grained control of prompts across different sections of the image. This is especially useful in scenarios where multiple subjects or themes need to coexist in an image without blending them."
version = "1.3.0"
license = { file = "LICENSE" }
dependencies  = []

[project.urls]
Repository = "https://github.com/Deathspike/ComfyUI-TiledAttentionCouple"

[tool.comfy]
PublisherId = "deathspike"
DisplayName = "ComfyUI-TiledAttentionCouple"
Icon = ""
